--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,14 @@ packages = [
 python = "^3.10"
 prompt = "^0.4.1"
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.1.1"
+asciinema = "^2.4.0"
+
 [tool.poetry.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
+brain-even = "brain_games.scripts.brain_even:main"
+brain-calc = "brain_games.scripts.brain_calc:main"
 
 [build-system]
 requires = ["poetry-core"]
