--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ asciinema = "^2.4.0"
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_even:main"
 brain-calc = "brain_games.scripts.brain_calc:main"
+brain-gcd = "brain_games.scripts.brain_gcd:main"
 
 [build-system]
 requires = ["poetry-core"]
